kustomapp/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kustomapp
spec:
  replicas: 2
  template:
    metadata:
    spec:
      containers:
      - name: nginx
        image: nginx:1.26.2
        ports:
        - containerPort: 80
        volumeMounts:
            - name: nginx-template
              mountPath: /etc/nginx/templates/default.conf.template
              readOnly: true
      volumes:
      - name: nginx-template
        configMap:
          name: nginx-template-configmap
