kustomapp/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kustomapp
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 80
