kustomapp/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kustomapp
  annotations: 
    cert-manager.io/issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - kustomapp.base.95-181-220-26.nip.io
    secretName: kustomapp.base.95-181-220-26.nip.io-tls
  rules:
  - host: kustomapp.base.95-181-220-26.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kustomapp
            port:
              number: 8080
